--- a/recognitions.html
+++ b/recognitions.html
@@ -20,75 +20,49 @@
 
   <!-- Main Content -->
   <main>
-    <h1 style="font-size: 2rem; font-weight: bold; margin-bottom: 2rem;">Awards</h1>
+    <h1 style="font-size: 2rem; font-weight: bold; margin-bottom: 2rem; text-align: center;">Awards</h1>
 
     <!-- Award Grid -->
-    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem;">
-      <!-- Example Award -->
-      <div style="text-align: center;">
-        <img src="/images/Cannian_Lions.png" alt="Cannes Lions Gold" style="height: 80px;" />
-        <p>Cannes Lions Gold × 1</p>
-      </div>
-      <div style="text-align: center;">
-        <img src="/images/bronze-lion.png" alt="Cannes Lions Bronze" style="height: 80px;" />
-        <p>Cannes Lions Bronze × 1</p>
-      </div>
-      <div style="text-align: center;">
-        <img src="/images/os-best-of-discipline-pencil-rank.png" alt="One Show Best of Discipline" style="height: 80px;" />
-        <p>Best of Discipline × 1</p>
-      </div>
-      <div style="text-align: center;">
-        <img src="/images/os-gold-pencil-rank.png" alt="One Show Gold Pencil" style="height: 80px;" />
-        <p>Gold Pencil × 1</p>
-      </div>
-      <div style="text-align: center;">
-        <img src="/images/os-bronze-pencil-rank.png" alt="One Show Bronze Pencil" style="height: 80px;" />
-        <p>Bronze Pencil × 1</p>
-      </div>
-      <div style="text-align: center;">
-        <img src="/images/12227641_10153674116675185_614845691565476466_n.jpg" alt="LIA Gold" style="height: 80px;" />
-        <p>LIA Gold × 1</p>
-      </div>
-      <div style="text-align: center;">
-        <img src="/images/graphite.png" alt="D&AD Graphite Pencil" style="height: 80px;" />
-        <p>D&AD Graphite × 1</p>
-      </div>
-      <div style="text-align: center;">
-        <img src="/images/wood.png" alt="D&AD Wood Pencil" style="height: 80px;" />
-        <p>D&AD Wood × 1</p>
-      </div>
-      <div style="text-align: center;">
-        <img src="/images/spikes.png" alt="Spikes Asia" style="height: 80px;" />
-        <p>Spikes Grand Prix × 1<br>Spikes Gold × 1<br>Spikes Bronze × 3<br>Agency of the Year × 1</p>
-      </div>
-      <div style="text-align: center;">
-        <img src="/images/Clio+-+Bronze.png" alt="Clio Bronze" style="height: 80px;" />
-        <p>Clio Bronze × 1</p>
-      </div>
-      <div style="text-align: center;">
-        <img src="/images/GRANDE.jpg" alt="Adfest Grande" style="height: 80px;" />
-        <p>Adfest Grande × 1</p>
-      </div>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 2rem; justify-items: center;">
+      <div><img src="/images/Cannian_Lions.png" alt="Cannes Lions Gold" style="height: 80px;" /><p>Cannes Lions Gold × 1</p></div>
+      <div><img src="/images/bronze-lion.png" alt="Cannes Lions Bronze" style="height: 80px;" /><p>Cannes Lions Bronze × 1</p></div>
+      <div><img src="/images/os-best-of-discipline-pencil-rank.png" alt="One Show Best of Discipline" style="height: 80px;" /><p>Best of Discipline × 1</p></div>
+      <div><img src="/images/os-gold-pencil-rank.png" alt="One Show Gold Pencil" style="height: 80px;" /><p>Gold Pencil × 1</p></div>
+      <div><img src="/images/os-bronze-pencil-rank.png" alt="One Show Bronze Pencil" style="height: 80px;" /><p>Bronze Pencil × 1</p></div>
+      <div><img src="/images/12227641_10153674116675185_614845691565476466_n.jpg" alt="LIA Gold" style="height: 80px;" /><p>LIA Gold × 1</p></div>
+      <div><img src="/images/graphite.png" alt="D&AD Graphite Pencil" style="height: 80px;" /><p>D&AD Graphite × 1</p></div>
+      <div><img src="/images/wood.png" alt="D&AD Wood Pencil" style="height: 80px;" /><p>D&AD Wood × 1</p></div>
+      <div><img src="/images/spikes.png" alt="Spikes Asia" style="height: 80px;" /><p>Spikes Asia Grand Prix × 1<br>Gold × 1<br>Bronze × 3<br>Agency of the Year × 1</p></div>
+      <div><img src="/images/Clio+-+Bronze.png" alt="Clio Bronze" style="height: 80px;" /><p>Clio Bronze × 1</p></div>
+      <div><img src="/images/GRANDE.jpg" alt="Adfest Grande" style="height: 80px;" /><p>Adfest Grande × 1</p></div>
     </div>
 
     <!-- Media Coverage -->
-    <h1 style="font-size: 2rem; font-weight: bold; margin: 4rem 0 2rem;">Media Coverage</h1>
+    <h1 style="font-size: 2rem; font-weight: bold; margin: 4rem 0 2rem; text-align: center;">Media Coverage</h1>
 
-    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem;">
-      <!-- Example Media Item -->
-      <a href="https://2024.liaentries.com/winners/?id_entry=100830&id_medium=8&id_submedium=9&id_category=0&view=details&range=w&page=21&keyword=&medium=&category=&award=&country=&title_brand=&credits=&company_name=&city=&proceed_simple_search=false&proceed_advanced_search=false" target="_blank" style="text-align: center; max-width: 200px;">
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 2rem;">
+      <!-- Add your media coverage entries here, repeat this block for each item -->
+      <a href="https://2024.liaentries.com/winners/?id_entry=100830&id_medium=8&id_submedium=9&id_category=0&view=details&range=w&page=21&keyword=&medium=&category=&award=&country=&title_brand=&credits=&company_name=&city=&proceed_simple_search=false&proceed_advanced_search=false" target="_blank">
         <img src="/images/Screenshot 2025-07-21 at 12.24.59 AM.png" alt="GOLD - PRINT" style="width: 100%;" />
-        <p style="margin-top: 0.5rem; font-weight: bold;">GOLD - PRINT</p>
-        <p style="font-size: 0.85rem;">London International Awards</p>
+        <p><strong>GOLD - PRINT</strong><br/>London International Awards</p>
       </a>
-
-      <a href="https://www.dandad.org/awards/professional/2025/240605/yoga-village/" target="_blank" style="text-align: center; max-width: 200px;">
+      <a href="https://www.dandad.org/awards/professional/2025/240605/yoga-village/" target="_blank">
         <img src="/images/Screenshot 2025-07-21 at 12.51.05 AM.png" alt="Yoga Village" style="width: 100%;" />
-        <p style="margin-top: 0.5rem; font-weight: bold;">Yoga Village</p>
-        <p style="font-size: 0.85rem;">D&AD</p>
+        <p><strong>Yoga Village</strong><br/>D&AD</p>
       </a>
-
-      <!-- Add the rest using same format... -->
+      <a href="https://www.digitaling.com/articles/1334752.html" target="_blank">
+        <img src="/images/remote_174305283672491.jpg" alt="Digitaling" style="width: 100%;" />
+        <p><strong>瑜伽村一战封神</strong><br/>Digitaling</p>
+      </a>
+      <a href="https://lbbonline.com/news/TBWAChinas-Towel-Percussion-Brings-New-Rhythm-to-Ancient-Tradition" target="_blank">
+        <img src="/images/Screenshot 2025-07-21 at 12.28.28 AM.png" alt="Towel Percussion" style="width: 100%;" />
+        <p><strong>Towel Percussion</strong><br/>Little Black Book</p>
+      </a>
+      <a href="https://marketech-apac.com/tbwa-group-china-yangzhou-tourism-revive-ancient-chinese-bathhouse-tradition-in-new-campaign/" target="_blank">
+        <img src="/images/Screenshot 2025-07-21 at 12.30.34 AM.png" alt="Yangzhou Tourism" style="width: 100%;" />
+        <p><strong>Yangzhou Tourism</strong><br/>MARKETECH APAC</p>
+      </a>
+      <!-- Continue adding more media coverage entries as needed -->
     </div>
   </main>
 
