--- a/recognitions.html
+++ b/recognitions.html
@@ -101,22 +101,96 @@
 
   <main>
     <h1>Awards</h1>
-    <section class="awards-grid">
-      <div class="award-item"><img src="images/Cannian_Lions.png" alt="Cannes Lions Gold" /><p>× 1</p></div>
-      <div class="award-item"><img src="images/bronze-lion.png" alt="Cannes Lions Bronze" /><p>× 1</p></div>
-      <div class="award-item"><img src="images/os-best-of-discipline-pencil-rank.png" alt="Best of Discipline" /><p>× 1</p></div>
-      <div class="award-item"><img src="images/os-gold-pencil-rank.png" alt="Gold Pencil" /><p>× 1</p></div>
-      <div class="award-item"><img src="images/os-bronze-pencil-rank.png" alt="Bronze Pencil" /><p>× 1</p></div>
-      <div class="award-item"><img src="images/12227641_10153674116675185_614845691565476466_n.jpg" alt="LIA Gold" /><p>× 1</p></div>
-      <div class="award-item"><img src="images/graphite.png" alt="Graphite Pencil" /><p>× 1</p></div>
-      <div class="award-item"><img src="images/wood.png" alt="Wood Pencil" /><p>× 1</p></div>
-      <div class="award-item"><img src="images/spikes.png" alt="Grand Prix" /><p>Grand Prix × 1</p></div>
-      <div class="award-item"><img src="images/spikes.png" alt="Gold" /><p>Gold × 1</p></div>
-      <div class="award-item"><img src="images/spikes.png" alt="Bronze" /><p>Bronze × 3</p></div>
-      <div class="award-item"><img src="images/spikes.png" alt="Agency of the Year" /><p>Agency of the Year × 1</p></div>
-      <div class="award-item"><img src="images/Clio+-+Bronze.png" alt="Clio Bronze" /><p>× 1</p></div>
-      <div class="award-item"><img src="images/GRANDE.jpg" alt="Adfest Grande" /><p>× 1</p></div>
-    </section>
+    <section id="awards" style="padding: 4rem 2rem; background-color: #ff0000; color: white; font-family: 'Space Grotesk', sans-serif;">
+  <h2 style="text-align: center; font-size: 2rem; font-weight: 700; margin-bottom: 2rem;">Awards</h2>
+  <div style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 2rem; justify-items: center;">
+    
+    <!-- Cannes Lions Gold -->
+    <div style="text-align: center;">
+      <img src="/images/Cannian_Lions.png" alt="Cannes Lions Gold" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 1</p>
+    </div>
+
+    <!-- Cannes Lions Bronze -->
+    <div style="text-align: center;">
+      <img src="/images/bronze-lion.png" alt="Cannes Lions Bronze" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 1</p>
+    </div>
+
+    <!-- The One Show Best of Discipline -->
+    <div style="text-align: center;">
+      <img src="/images/os-best-of-discipline-pencil-rank.png" alt="The One Show Best of Discipline" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 1</p>
+    </div>
+
+    <!-- The One Show Gold Pencil -->
+    <div style="text-align: center;">
+      <img src="/images/os-gold-pencil-rank.png" alt="The One Show Gold Pencil" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 1</p>
+    </div>
+
+    <!-- The One Show Bronze Pencil -->
+    <div style="text-align: center;">
+      <img src="/images/os-bronze-pencil-rank.png" alt="The One Show Bronze Pencil" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 1</p>
+    </div>
+
+    <!-- London International Awards Gold -->
+    <div style="text-align: center;">
+      <img src="/images/12227641_10153674116675185_614845691565476466_n.jpg" alt="London International Awards Gold" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 1</p>
+    </div>
+
+    <!-- D&AD Graphite Pencil -->
+    <div style="text-align: center;">
+      <img src="/images/graphite.png" alt="D&AD Graphite Pencil" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 1</p>
+    </div>
+
+    <!-- D&AD Wood Pencil -->
+    <div style="text-align: center;">
+      <img src="/images/wood.png" alt="D&AD Wood Pencil" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 1</p>
+    </div>
+
+    <!-- Spikes Asia Grand Prix -->
+    <div style="text-align: center;">
+      <img src="/images/spikes.png" alt="Spikes Asia Grand Prix" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 1</p>
+    </div>
+
+    <!-- Spikes Asia Gold -->
+    <div style="text-align: center;">
+      <img src="/images/spikes.png" alt="Spikes Asia Gold" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 1</p>
+    </div>
+
+    <!-- Spikes Asia Bronze -->
+    <div style="text-align: center;">
+      <img src="/images/spikes.png" alt="Spikes Asia Bronze" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 3</p>
+    </div>
+
+    <!-- Spikes Asia Agency of the Year by Market -->
+    <div style="text-align: center;">
+      <img src="/images/spikes.png" alt="Spikes Asia Agency of the Year by Market" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 1</p>
+    </div>
+
+    <!-- Clios Bronze -->
+    <div style="text-align: center;">
+      <img src="/images/Clio+-+Bronze.png" alt="Clios Bronze" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 1</p>
+    </div>
+
+    <!-- Adfest Grande -->
+    <div style="text-align: center;">
+      <img src="/images/GRANDE.jpg" alt="Adfest Grande" style="max-width: 100px;">
+      <p style="margin-top: 0.5rem;">× 1</p>
+    </div>
+
+  </div>
+</section>
 
     <h2>Media Coverage</h2>
     <section class="media-grid">
