--- a/recognitions.html
+++ b/recognitions.html
@@ -26,12 +26,6 @@
       font-weight: bold;
     }
 
-    h1 {
-      text-align: center;
-      margin: 2rem 0 1rem;
-      font-size: 2rem;
-    }
-
     .awards-grid {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
@@ -51,8 +45,16 @@
     }
 
     .award p {
-      margin-top: 0.5rem;
+      margin: 0.3rem 0;
+    }
+
+    .award .title {
       font-weight: bold;
+      font-size: 1rem;
+    }
+
+    .award .count {
+      font-size: 0.9rem;
     }
 
     footer {
@@ -74,64 +76,76 @@
     </nav>
   </header>
 
-  <h1>Recognitions</h1>
-
   <section class="awards-grid">
     <div class="award">
-      <img src="/images/Cannian_Lions.png" alt="Cannes Lions Gold">
-      <p>Cannes Lions Gold × 1</p>
+      <img src="/images/Cannian_Lions.png" alt="Cannes Lions Gold" />
+      <p class="title">Cannes Lions Gold</p>
+      <p class="count">× 1</p>
     </div>
     <div class="award">
-      <img src="/images/bronze-lion.png" alt="Cannes Lions Bronze">
-      <p>Cannes Lions Bronze × 1</p>
+      <img src="/images/bronze-lion.png" alt="Cannes Lions Bronze" />
+      <p class="title">Cannes Lions Bronze</p>
+      <p class="count">× 1</p>
     </div>
     <div class="award">
-      <img src="/images/os-best-of-discipline-pencil-rank.png" alt="Best of Discipline">
-      <p>The One Show Best of Discipline × 1</p>
+      <img src="/images/os-best-of-discipline-pencil-rank.png" alt="Best of Discipline" />
+      <p class="title">One Show Best of Discipline</p>
+      <p class="count">× 1</p>
     </div>
     <div class="award">
-      <img src="/images/os-gold-pencil-rank.png" alt="Gold Pencil">
-      <p>The One Show Gold Pencil × 1</p>
+      <img src="/images/os-gold-pencil-rank.png" alt="Gold Pencil" />
+      <p class="title">One Show Gold Pencil</p>
+      <p class="count">× 1</p>
     </div>
     <div class="award">
-      <img src="/images/os-bronze-pencil-rank.png" alt="Bronze Pencil">
-      <p>The One Show Bronze Pencil × 1</p>
+      <img src="/images/os-bronze-pencil-rank.png" alt="Bronze Pencil" />
+      <p class="title">One Show Bronze Pencil</p>
+      <p class="count">× 1</p>
     </div>
     <div class="award">
-      <img src="/images/12227641_10153674116675185_614845691565476466_n.jpg" alt="LIA Gold">
-      <p>London Int’l Awards Gold × 1</p>
+      <img src="/images/12227641_10153674116675185_614845691565476466_n.jpg" alt="LIA Gold" />
+      <p class="title">London Int’l Awards Gold</p>
+      <p class="count">× 1</p>
     </div>
     <div class="award">
-      <img src="/images/graphite.png" alt="Graphite Pencil">
-      <p>D&AD Graphite Pencil × 1</p>
+      <img src="/images/graphite.png" alt="Graphite Pencil" />
+      <p class="title">D&AD Graphite Pencil</p>
+      <p class="count">× 1</p>
     </div>
     <div class="award">
-      <img src="/images/wood.png" alt="Wood Pencil">
-      <p>D&AD Wood Pencil × 1</p>
+      <img src="/images/wood.png" alt="Wood Pencil" />
+      <p class="title">D&AD Wood Pencil</p>
+      <p class="count">× 1</p>
     </div>
     <div class="award">
-      <img src="/images/spikes.png" alt="Spikes Asia Grand Prix">
-      <p>Spikes Asia Grand Prix × 1</p>
+      <img src="/images/spikes.png" alt="Spikes Grand Prix" />
+      <p class="title">Spikes Asia Grand Prix</p>
+      <p class="count">× 1</p>
     </div>
     <div class="award">
-      <img src="/images/spikes.png" alt="Spikes Asia Gold">
-      <p>Spikes Asia Gold × 1</p>
+      <img src="/images/spikes.png" alt="Spikes Gold" />
+      <p class="title">Spikes Asia Gold</p>
+      <p class="count">× 1</p>
     </div>
     <div class="award">
-      <img src="/images/spikes.png" alt="Spikes Asia Bronze">
-      <p>Spikes Asia Bronze × 3</p>
+      <img src="/images/spikes.png" alt="Spikes Bronze" />
+      <p class="title">Spikes Asia Bronze</p>
+      <p class="count">× 3</p>
     </div>
     <div class="award">
-      <img src="/images/spikes.png" alt="Spikes Asia AOTY">
-      <p>Spikes Asia AOTY by Market × 1</p>
+      <img src="/images/spikes.png" alt="Spikes AOTY" />
+      <p class="title">Spikes Asia AOTY by Market</p>
+      <p class="count">× 1</p>
     </div>
     <div class="award">
-      <img src="/images/Clio+-+Bronze.png" alt="Clio Bronze">
-      <p>Clios Bronze × 1</p>
+      <img src="/images/Clio+-+Bronze.png" alt="Clio Bronze" />
+      <p class="title">Clio Bronze</p>
+      <p class="count">× 1</p>
     </div>
     <div class="award">
-      <img src="/images/GRANDE.jpg" alt="Adfest Grande">
-      <p>Adfest Grande × 1</p>
+      <img src="/images/GRANDE.jpg" alt="Adfest Grande" />
+      <p class="title">Adfest Grande</p>
+      <p class="count">× 1</p>
     </div>
   </section>
 
