--- a/recognitions.html
+++ b/recognitions.html
@@ -9,7 +9,7 @@
     body {
       font-family: 'Space Grotesk', sans-serif;
       margin: 0;
-      background-color: #ffe034;
+      background-color: #ffffff;
       color: #000;
     }
 
